--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img
         class="px-2 py-2"
         style="border-radius: 7%"
-        src="https://drive.google.com/file/d/1kq3aFgO6PBPfnLOLyUjXFATQYfvMEekS/view?usp=sharing"
+        src="https://i.postimg.cc/4xtzCJ5q/image-qr-code.png"
         alt="qr-image-qr-code"
       />
       <h1 class="text-center text-sm px-5 py-2 font-semibold text-sky-900">
