--- a/index.html
+++ b/index.html
@@ -30,29 +30,34 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body class="bg-slate-300 flex flex-col items-center justify-center h-screen">
-    <div
+    <section
       class="w-56 h-96 bg-white rounded-[5%] font-sans drop-shadow-lg hover:drop-shadow-2xl"
     >
-      <img
-        class="px-2 py-2"
-        style="border-radius: 7%"
-        src="https://i.postimg.cc/4xtzCJ5q/image-qr-code.png"
-        alt="qr-image-qr-code"
-      />
-      <h1 class="text-center text-sm px-5 py-2 font-semibold text-sky-900">
-        Improve your front-end skills by building projects
-      </h1>
-      <p class="text-xs text-center px-5 py-3 text-slate-400">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
-    <small class="whitespace-nowrap mt-[12%]">
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a href="https://github.com/bluesky1992-web"><i class="fa-brands fa-github"></i> Ali ibrahim</a
-      >.</small
-    >
+      <main>
+        <img
+          class="px-2 py-2"
+          style="border-radius: 7%"
+          src="https://i.postimg.cc/4xtzCJ5q/image-qr-code.png"
+          alt="qr-image-qr-code"
+        />
+        <h1 class="text-center text-sm px-5 py-2 font-semibold text-sky-900">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="text-xs text-center px-5 py-3 text-slate-400">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </main>
+    </section>
+    <footer class="mt-[12%]">
+      <small class="whitespace-nowrap">
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/bluesky1992-web"
+          ><i class="fa-brands fa-github"></i> Ali ibrahim</a
+        >.</small
+      >
+    </footer>
   </body>
 </html>
